# digital_signature_documents

./: .gitignore  GIT_STRATEGY.md  README.md  env.example  pyproject.toml  requirements.txt
.aws/: task-definition.json
.github/workflows/: cd.yml  ci.yml
app/: config.py  db.py  main.py
app/api/: routes.py  shortlink_routes.py
app/core/: security.py  signing.py
app/delivery/: __init__.py  abstractions.py  email_deliverer.py  sms_deliverer.py
app/models/: __init__.py  invoice.py  short_link.py
app/services/: cleanup_service.py  email_service.py  invoice_builder.py  invoice_parser.py  pdf_reader.py  scheduler.py  signing_service.py  sms_service.py  storage_service.py  url_shortener_service.py
app/utils/: audit.py  logger.py  validators.py
docker/: Dockerfile  docker-compose.yml
scripts/: analyze_signature_position.py  api_client.ps1  extract_signature_position.py  find_small_stamp_position.py  generate_keys.py  measure_signature_position.py  remove_white_background.py
tests/integration/: test_full_flow.py
tests/unit/: test_email_service.py  test_invoice_builder.py  test_invoice_parser.py  test_pdf_reader.py  test_signing.py  test_sms_service.py
